refactor: update according review suggestions